--- a/src/client/modules/my/app/app.html
+++ b/src/client/modules/my/app/app.html
@@ -6,6 +6,9 @@
         <my-router-module register-page="home" is-default="true">
             <my-profile></my-profile>
         </my-router-module>
+        <my-router-module register-page="mywork">
+            <my-mywork></my-mywork>
+        </my-router-module>
     </my-router-module>
 
     <footer style="z-index: 10000 !important;" class="slds-docked-form-footer">
