--- a/src/client/modules/my/headerComponent/headerComponent.html
+++ b/src/client/modules/my/headerComponent/headerComponent.html
@@ -33,20 +33,23 @@
                                     <a onclick={getToHome}>about</a>
                                 </span>
                                 <span class="away">
+                                    <a onclick={mywork}>my work</a>
+                                </span>
+                                <span class="away">
                                     <a href="https://sfdcstan.wordpress.com/"
-                                        >blog</a
-                                    >
+                                        >blog
+                                    </a>
                                 </span>
                                 <span class="away">
                                     <a href="https://github.com/prashantk0001"
-                                        >github</a
-                                    >
+                                        >github
+                                    </a>
                                 </span>
                                 <span class="away">
                                     <a
                                         href="https://www.linkedin.com/in/kashyap-prashant/"
-                                        >linkedIn</a
-                                    >
+                                        >linkedIn
+                                    </a>
                                 </span>
                             </div>
                         </div>
