--- a/src/client/modules/my/headerComponent/headerComponent.html
+++ b/src/client/modules/my/headerComponent/headerComponent.html
@@ -36,18 +36,18 @@
                                     <a onclick={mywork}>my work</a>
                                 </span>
                                 <span class="away">
-                                    <a href="https://sfdcstan.wordpress.com/"
+                                    <a href="https://sfdcstan.wordpress.com/" target="_blank"
                                         >blog
                                     </a>
                                 </span>
                                 <span class="away">
-                                    <a href="https://github.com/prashantk0001"
+                                    <a href="https://github.com/prashantk0001" target="_blank"
                                         >github
                                     </a>
                                 </span>
                                 <span class="away">
                                     <a
-                                        href="https://www.linkedin.com/in/kashyap-prashant/"
+                                        href="https://www.linkedin.com/in/kashyap-prashant/" target="_blank"
                                         >linkedIn
                                     </a>
                                 </span>
