--- a/src/client/modules/my/profile/profile.html
+++ b/src/client/modules/my/profile/profile.html
@@ -16,7 +16,7 @@
         >
             <article
                 class="slds-card tds-card slds-p-top_large customverylightbackground"
-                style="margin-top: 8rem; margin-bottom: 3rem"
+                style="margin-top: 8rem; margin-bottom: 3rem;padding-bottom: 2rem;"
             >
                 <div class="slds-card__body slds-card__body_inner">
                     <c-layout horizontal-align="" multiple-rows>
@@ -85,13 +85,10 @@
                             people. I've been developing for over four years,
                             learning for twice that, and excelling for over half
                             that. I
-                            <a href="https://github.com/prashantk0001"> code</a
-                            >,
-                            <a
-                                href="https://trailblazercommunitygroups.com/events/details/salesforce-nagpur-in-developers-group-presents-adding-cherries-to-lwc/"
-                            >
-                                speak</a
-                            >, discuss, think, learn and listen - usually not in
+                            <a href="https://github.com/prashantk0001"  target="_blank"> code</a>,
+                            <a href="https://trailblazercommunitygroups.com/events/details/salesforce-nagpur-in-developers-group-presents-adding-cherries-to-lwc/" target="_blank"> speak</a>, 
+                            <a onclick={mywork} > contribute</a>, 
+                            discuss, think, learn and listen - usually not in
                             that order. Well, it's not a lot, but it's honest
                             work.
                         </p>
