--- a/src/client/modules/my/showCase/showCase.html
+++ b/src/client/modules/my/showCase/showCase.html
@@ -11,7 +11,7 @@
                     <c-layout horizontal-align="spread" multiple-rows>
 
                         <c-layout-item size="12" large-device-size="2" medium-device-size="2" small-device-size="3">
-                            <span class="slds-item_label slds-text-color_weak slds-text-title_bold" title="Second Label">
+                            <span class="slds-item_label slds-text-color_weak bold" title="Second Label">
                                 Description:
                             </span>
                         </c-layout-item>
@@ -22,7 +22,7 @@
                         </c-layout-item>
                         
                         <c-layout-item size="12" large-device-size="2" medium-device-size="2" small-device-size="3">
-                            <span class="slds-item_label slds-text-color_weak slds-text-title_bold" title="First Label">
+                            <span class="slds-item_label slds-text-color_weak bold" title="First Label">
                                 Author:
                             </span>
                         </c-layout-item>
@@ -35,7 +35,7 @@
 
                         <template if:true={demo}>
                             <c-layout-item size="12" large-device-size="2" medium-device-size="2" small-device-size="3">
-                                <span class="slds-item_label slds-text-color_weak slds-text-title_bold" title="Second Label">
+                                <span class="slds-item_label slds-text-color_weak bold" title="Second Label">
                                     Try it <a href={demo} target="_blank">here</a>
                                 </span>
                             </c-layout-item>
